# gaze-maze

./: .gitignore  CMakeLists.txt  main.cpp
assets/: maze.txt
assets/meshes/Amongus/: scene.gltf
assets/meshes/Fantasy/: Mushroom.mtl
assets/meshes/Fantasy/Lantern/: LanternLit.mtl
assets/meshes/Fantasy/Shroom/: Mushroom.mtl
assets/meshes/LowPolyPlant/: LowPolyPlant.dae
assets/meshes/NewWall/: Wall.dae
assets/meshes/Rocks/: Rocks.dae
assets/meshes/RocksVar1/: RocksVar1.dae
assets/meshes/Wall/: Wall.dae
assets/meshes/grassSpot/: grassSpot.mtl
assets/meshes/vines/: vines.mtl
assets/shaders/default2DShader/: default.frag
assets/shaders/defaultShader/: default.frag  default.vert  defaultInstancing.vert
assets/shaders/meshShader/: mesh.frag  mesh.vert  meshAnimated.vert  meshInstancing.vert
assets/shaders/particleShader/: particle.frag  particle.vert
assets/shaders/pickerShader/: picker.frag  picker.vert
assets/shaders/skyboxShader/: skybox.frag  skybox.vert
src/: Game.cpp  Game.h  Globals.h  main.cpp
src/core/: Camera.cpp  Camera.h  Maze.cpp  Maze.h  Player.cpp  Player.h  Skybox.cpp  Skybox.h
src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Particle.cpp  Particle.h  ParticleGenerator.cpp  ParticleGenerator.h
src/objects/: Collisioner.cpp  Collisioner.h  Crosshair.cpp  Crosshair.h  Mesh.cpp  Mesh.h
src/objects/based/: Cube.cpp  Cube.h  Plane.cpp  Plane.h
src/objects/model/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssimpGLMHelpers.h  Bone.cpp  Bone.h  BoneInfo.h  Model.cpp  Model.h  ModelMesh.cpp  ModelMesh.h
src/resources/: ResourceManager.cpp  ResourceManager.h
src/resources/shaders/: Shader.cpp  Shader.h
src/resources/textures/: Texture.cpp  Texture.h
src/shaders/: Shader.cpp  Shader.h
src/utils/: ColorPicker.cpp  ColorPicker.h  MazeGenerator.cpp  MazeGenerator.h  MazeLoader.cpp  MazeLoader.h  MousePicker.cpp  MousePicker.h
